--- a/src/frontend/views/partials/containerOffer_Customer.hbs
+++ b/src/frontend/views/partials/containerOffer_Customer.hbs
@@ -5,9 +5,9 @@
         </div>
         <div class="card-stacked" id="info">
             <div class="card-content">
-                <p class="flow-text">Name: {{offerarr.}}</p>
-                <p class="flow-text">Größe: {{this.size}}</p>
-                <p class="flow-text">Gewicht: {{this.weight}}</p>
+                <p class="flow-text">Name: {{offers.}}</p>
+                <p class="flow-text">Größe: {{offers.size}}</p>
+                <p class="flow-text">Gewicht: {{offers.weight}}</p>
             </div>
             <div class="card-content">
                 <p>Beschreibung.BeschreibungBeschreibung
