--- a/src/frontend/views/searchOffer.hbs
+++ b/src/frontend/views/searchOffer.hbs
@@ -4,7 +4,7 @@
 
     <div class="row l1 s1 xl1"></div>
     <ul class=" row l10 s10 xl10 tabs tabs-fixed-width tab-demo z-depth-1 taboffer">
-        <li class="tab col s6"><a target="_self" href="">Für Hunde besitzer</a></li>
+        <li class="tab col s6"><a target="_self" href="">Für Tier besitzer</a></li>
         <li class="tab col s6"><a target="_self" href="/searchHelper">Für Anbieter</a></li>
     </ul>
     <div class="row l1 s1 xl1"></div>
