--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -1,4 +1,4 @@
-<form class="filterForm" method="post" action="/filter/submit">
+<form class="filterForm" method="get" action="/searchOffer/filter">
     <!-- radius (suchkreis) -->
     <div class="row filterGroup">
         <label for="PLZ">Postleitzahl:</label>
