--- a/src/frontend/views/searchHelper.hbs
+++ b/src/frontend/views/searchHelper.hbs
@@ -5,7 +5,7 @@
 
     <div class="row l1 s1 xl1"></div>
     <ul class=" row l10 s10 xl10 tabs tabs-fixed-width tab-demo z-depth-1 taboffer">
-        <li class="tab"><a target="_self" href="/searchOffer">Für Hunde besitzer</a></li>
+        <li class="tab"><a target="_self" href="/searchOffer">Für Tier besitzer</a></li>
         <li class="tab"><a class="active" href="/">Für Anbieter</a></li>
     </ul>
     <div class="row l1 s1 xl1"></div>
@@ -18,7 +18,7 @@
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>listLayout bool=true helperarr=helper}}
+                {{>listLayout bool=true helperarr=helpers}}
             </div>
         </div>
     </div>
