--- a/src/frontend/views/partials/filterHelper.hbs
+++ b/src/frontend/views/partials/filterHelper.hbs
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="row  center-align">
-            <button class="row s12 l12 xl12 filter btn-large waves-effect waves-light" type="submit"
+            <button class="row s12 l12 xl12 filter btn-large waves-effect waves-light blue-button" type="submit"
                     name="action">Submit
                 <i class="material-icons right">search</i>
             </button>
