--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <input class="btn" id="registerButton" type="submit" value="Registrieren">
+            <input class="btn" id="registerButton" type="submit" value="Registrieren" style="background-color: #084177">
         </form>
     </div>
 </div>
