--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -84,8 +84,8 @@
                pattern="[0-9]{2}" onchange="handleChange(this);">
     </div>
 
-    <div class="row  center-align">
-        <button class="row s12 l12 xl12 filter center-align btn-large waves-effect waves-light" type="submit" name="action">Submit
+    <div class="row center-align">
+        <button class="row s12 l12 xl12 filter center-align btn-large waves-effect waves-light blue-button" type="submit" name="action">Submit
             <i class="material-icons right">search</i>
         </button>
     </div>
