--- a/src/frontend/views/partials/listLayout.hbs
+++ b/src/frontend/views/partials/listLayout.hbs
@@ -3,7 +3,7 @@
         <!--some personal info for example address -->
     </div>
     <div class="list">
-        {{#if bool}}
+        {{#if temp}}
             {{#each helperarr}}
                 <div> {{>containerOffer_Owner helpers=this}}</div>
             {{/each}}
