--- a/src/frontend/views/searchHelper.hbs
+++ b/src/frontend/views/searchHelper.hbs
@@ -18,7 +18,7 @@
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>listLayout bool=true helperarr=helpers}}
+                {{>listLayout temp=true helperarr=helpers}}
             </div>
         </div>
     </div>
