Fixed Search Images

--- a/src/frontend/views/partials/containerOffer_Customer.hbs
+++ b/src/frontend/views/partials/containerOffer_Customer.hbs
@@ -1,7 +1,8 @@
 <div class="col s12 m12">
-    <div class="card horizontal">
+    <div class="card horizontal card small">
         <div class="card-image" id="image-Container">
-            <img src={{this.animalPicture}} alt="Tier Bild">
+            {{!--<img src="/uploads/{{offers.animals.[0].imageName}}" alt="Tier Bild">--}}
+            <img src="/assets/img/cat2.jpg" alt="Tier Bild">
         </div>
         <div class="card-stacked" id="info">
             <div class="row s12 l12 xl12">
