--- a/src/frontend/views/partials/containerOffer_Owner.hbs
+++ b/src/frontend/views/partials/containerOffer_Owner.hbs
@@ -1,7 +1,7 @@
 <div class="col s12 m12">
     <div class="card horizontal card medium"><!--TODO cardsmall-->
         <div class="card-image" id="image-Container">
-            <img src="{{helpers.imageName}}" alt="Personen Bild">
+            <img src="/uploads/{{helpers.owner.imageName}}" alt="Personen Bild">
         </div>
         <div class="card-stacked" id="info">
             <div class="card-content">
