--- a/src/frontend/views/partials/containerOffer_Customer.hbs
+++ b/src/frontend/views/partials/containerOffer_Customer.hbs
@@ -1,45 +1,43 @@
 <div class="col s12 m12">
-    <div class="card horizontal card small">
-        <div class="card-image" id="image-Container">
-            {{!--<img src="/uploads/{{offers.animals.[0].imageName}}" alt="Tier Bild">--}}
-            <img src="/assets/img/cat2.jpg" alt="Tier Bild">
-        </div>
-        <div class="card-stacked" id="info">
-            <div class="row s12 l12 xl12">
-            {{#each offers.animals}}
-                    <label for="name">Name:</label><br>{{this.name}}
-                    <label for="firstname">Gewicht(in kg):</label><br>{{this.weight}}
-                    <label for="age">Größe(in cm):</label><br>{{this.size}}
-            {{/each}}
+    {{#each offers.animals}}
+        <div class="card horizontal card small">
+            <div class="card-image" id="image-Container">
+                {{!--<img src="/uploads/{{offers.animals.[0].imageName}}" alt="Tier Bild">--}}
+                <img src="/assets/img/cat2.jpg" alt="Tier Bild">
             </div>
-            <div class="card-content">
-                <p>{{offers.description}}</p>
-            </div>
-            <div class="card-action center-align box">
-                <a class="btn-flat modal-trigger" href="#terms">Anfragen</a>
-            </div>
+            <div class="card-stacked" id="info">
 
-            <div class="modal" id="terms">
-                <div class="modal-content center-align">
-                    <h5>Zustimmen </h5>
-                    <ul>
-                        <li>Ihre persönlichen Daten werden übersand</li>
-                        <li>Sie stellen eine Anfrage das Angebot anzunehmen</li>
-                        <li>Sie stellen eine Anfrage zur Kontaktaufnahme</li>
-                    </ul>
+                <label for="name">Name:</label><br>{{this.name}}
+                <label for="firstname">Gewicht(in kg):</label><br>{{this.weight}}
+                <label for="age">Größe(in cm):</label><br>{{this.size}}
+
+                <div class="card-content">
+                    <p>{{offers.description}}</p>
                 </div>
-                <div class="modal-footer center-align">
-                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
-                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                <div class="card-action center-align box">
+                    <a class="btn-flat modal-trigger" href="#terms">Anfragen</a>
+                </div>
+
+                <div class="modal" id="terms">
+                    <div class="modal-content center-align">
+                        <h5>Zustimmen </h5>
+                        <ul>
+                            <li>Ihre persönlichen Daten werden übersand</li>
+                            <li>Sie stellen eine Anfrage das Angebot anzunehmen</li>
+                            <li>Sie stellen eine Anfrage zur Kontaktaufnahme</li>
+                        </ul>
+                    </div>
+                    <div class="modal-footer center-align">
+                        <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
+                        <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    {{/each}}
 </div>
 <script type="text/javascript" src="assets/js/search.js"></script>
 <script>
-    $(document).ready(function() {
-        $('.modal').modal();
-    });
+    $(document).ready(() => $('.modal').modal());
 </script>
 
