Fixed not-working mobile sidenav

--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -2,8 +2,8 @@
     <nav>
         <div class="nav-wrapper container">
             <a href="/" class="brand-logo">Pet-Helper</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <a href="/" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
                 <li><a id="" href="/searchOffer">Einträge durchsuchen</a></li>
                 <li><a id="" href="/create-search">Hilfe suchen</a></li>
                 <li><a id="" href="/create-offer">Hilfe anbieten</a></li>
@@ -11,17 +11,16 @@
                 <li><a id="" href="/register">Registrieren</a></li>
             </ul>
         </div>
-
-        <ul class="sidenav" id="mobile-demo">
-            <li><a id="" href="/searchOffer">Suche</a></li>
-            <li><a id="" href="/login">Login</a></li>
-            <li><a id="" href="/register">Register</a></li>
-            <li><a id="" href="/profile">Profile</a></li>
-            <li><a id="" href="/create-search">Profile</a></li>
-            <li><a id="" href="/create-offer">Profile</a></li>
-        </ul>
     </nav>
 </div>
 
+<ul class="sidenav" id="mobile-nav">
+    <li><a id="" href="/searchOffer">Einträge durchsuchen</a></li>
+    <li><a id="" href="/create-search">Hilfe suchen</a></li>
+    <li><a id="" href="/create-offer">Hilfe anbieten</a></li>
+    <li><a id="" href="/login">Login</a></li>
+    <li><a id="" href="/register">Registrieren</a></li>
+</ul>
 
 <script type="text/javascript" src="assets/materialize/materialize.min.js"></script>
+
