--- a/src/frontend/views/partials/header.hbs
+++ b/src/frontend/views/partials/header.hbs
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="/assets/materialize/materialize.min.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script type="text/javascript" src="/assets/jquery/jquery-1.11.0.js"></script>
+    <script type="text/javascript" src="/assets/jquery/jquery-migrate-1.2.1.js"></script>
 
 
     <!--    custom css -->
