--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -1,3 +1,7 @@
+<div style="background-color: yellow; position: fixed; z-index: 999; width: 10%">
+    <p class="flow-text" style="margin: 0 0 2em 0">DIES IST EIN PROTOTYP</p>
+    <p class="flow-text" style="margin: 0">Bitte geben sie keine vertraulichen Daten an!</p>
+</div>
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper container">
