--- a/src/frontend/views/partials/listLayout.hbs
+++ b/src/frontend/views/partials/listLayout.hbs
@@ -3,11 +3,11 @@
         <!--some personal info for example address -->
     </div>
     <div class="list">
-        {{#if temp}}
+        {{#if isHelperSearch}}
             {{#each helperarr}}
                 {{>containerOffer_Owner helpers=this}}
             {{/each}}
-        {{else}}
+        {{else}} <!-- must be offer search -->
             {{#each offerarr}}
                 {{>containerOffer_Customer offers=this}}
             {{/each}}
