--- a/src/frontend/views/searchOffer.hbs
+++ b/src/frontend/views/searchOffer.hbs
@@ -17,7 +17,7 @@
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>listLayout temp=false offerarr=offers}}
+                {{>listLayout isHelperSearch=false offerarr=offers}}
             </div>
         </div>
     </div>
