Implemented crude search for help-seekers
* Basically same steps as with searchOffers
* created dto for query
* adapted controller
* fixed link in partial filterOffer.hbs

--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -1,4 +1,4 @@
-<form class="filterForm" method="get" action="/searchOffer/filter">
+<form class="filterForm" method="get" action="/searchOffer">
     <!-- radius (suchkreis) -->
     <div class="row filterGroup">
         <label for="PLZ">Postleitzahl:</label>
