Renamed tabs of search

--- a/src/frontend/views/searchHelper.hbs
+++ b/src/frontend/views/searchHelper.hbs
@@ -5,8 +5,8 @@
 
     <div class="row l1 s1 xl1"></div>
     <ul class=" row l10 s10 xl10 tabs tabs-fixed-width tab-demo z-depth-1 taboffer">
-        <li class="tab"><a target="_self" href="/searchOffer">Für Tier besitzer</a></li>
-        <li class="tab"><a class="active" href="/">Für Anbieter</a></li>
+        <li class="tab"><a target="_self" href="/searchOffer">Angebote</a></li>
+        <li class="tab"><a class="active" href="/">Helfer</a></li>
     </ul>
     <div class="row l1 s1 xl1"></div>
     <div class="row s12 l12 xl12">
