renamed a bunch of files for better readability

--- a/src/frontend/views/partials/entryListView.hbs
+++ b/src/frontend/views/partials/entryListView.hbs
@@ -5,11 +5,11 @@
     <div class="list">
         {{#if isHelperSearch}}
             {{#each helperarr}}
-                {{>containerOffer_Owner helpers=this}}
+                {{>helpersView helpers=this}}
             {{/each}}
         {{else}} <!-- must be offer search -->
             {{#each offerarr}}
-                {{>containerOffer_Customer offers=this}}
+                {{>offersView offers=this}}
             {{/each}}
         {{/if}}
     </div>
