--- a/src/frontend/views/searchHelper.hbs
+++ b/src/frontend/views/searchHelper.hbs
@@ -13,12 +13,12 @@
 
         <div class="row ">
             <div class="col s12 l3 xl3 filteroffer">
-                {{>filterHelper }}
+                {{>helperFilterView }}
             </div>
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>listLayout isHelperSearch=true helperarr=helpers}}
+                {{>entryListView isHelperSearch=true helperarr=helpers}}
             </div>
         </div>
     </div>
