--- a/src/frontend/views/searchOffer.hbs
+++ b/src/frontend/views/searchOffer.hbs
@@ -12,15 +12,14 @@
 
         <div class="row ">
             <div class="col s12 l3 xl3 filteroffer">
-                {{>filterOffer}}
+                {{>offerFilterView}}
             </div>
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>listLayout isHelperSearch=false offerarr=offers}}
+                {{>entryListView isHelperSearch=false offerarr=offers}}
             </div>
         </div>
     </div>
 </div>
 {{>bottomInclude}}
-<script type="text/javascript" src="assets/js/popup.js"></script>
